# flight-price-tracker-ai

./: .gitignore  PHASE12_CHAT_WIDGET_RESEARCH.md  README.md  bootstrap.sh  config.example.toml  pyproject.toml  requirements-dev.txt  requirements.txt
skytracer/: __init__.py  alerts.py  bootstrap.py  charts.py  cli.py  config.py  db.py  logging_conf.py  models.py  observations.py  paths.py  poller.py  routemap.py  settings_store.py  stats.py  watchdog.py
skytracer/ai/: __init__.py  answer.py  anthropic_backend.py  context.py  llamaserver_backend.py  ollama_backend.py  openai_compat.py  tools.py
skytracer/bots/: __init__.py  discord_bot.py  replies.py  telegram_bot.py
skytracer/notify/: __init__.py  _http.py  discord.py  email.py  ntfy.py  rendering.py  whatsapp.py
systemd/: skytracer-bot-discord.service  skytracer-bot-telegram.service  skytracer-poll.service  skytracer-poll.timer  skytracer-web.service
tests/: conftest.py  test_ai_backends.py  test_ai_context.py  test_alerts.py  test_bots.py  test_charts.py  test_cli.py  test_config.py  test_db.py  test_models.py  test_notify_discord.py  test_notify_email.py  test_notify_factory.py  test_notify_ntfy.py  test_notify_rendering.py  test_notify_whatsapp.py  test_observations.py  test_poller.py  test_routemap.py  test_settings_store.py  test_sources_duffel.py  test_sources_google.py  test_sources_kiwi.py  test_sources_mcp.py  test_sources_orchestrator.py  test_sources_travelpayouts.py  test_stats.py  test_watchdog.py  test_web_auth.py  test_web_chat.py  test_web_dashboard.py  test_web_settings.py
(+21 files in other folders)
